--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
   <div id="line">
-    <div id="logo">
+    <div class="logo">
       <img class="pyramid" src="icon/pyramid.png" alt="pyramid">
       <h3>Louvre</h3>
     </div>
@@ -31,7 +31,11 @@
       <div class="text-content">
         <h1>WELCOME<br> TO THE LOUVRE</h1>
         <h4>From the castle to the museum</h4>
-        <button>Discover the Louvre</button>
+        <button>
+          <a href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">
+            <span>Discover the Louvre</span>
+          </a>
+        </button>
       </div>
       <img src="img/joconda.png" alt="Mona Lisa">
     </div>
@@ -95,16 +99,16 @@
         <div class="bar"></div>
         <p class="first">Las Meninas is a 1656 painting by Diego Velázquez, the leading
           artist of the Spanish Golden Age.</p>
-        <p class="second">It was cleaned in 1984 to remove a "yellow veil" of dust that had
+        <p class="second">It was cleaned in 1984 to remove a <span class="yellow">"yellow veil"</span> of dust that had
           gathered since the previous restoration in the 19th century.</p>
         <p class="third">The cleaning provoked furious protests, not because the picture had
           been damaged in any way, but because it looked different.</p>
       </div>
       <div class="slide-content">
-        <div class="yellow-container">
+        <div class="yellow">
           <img class="yellow" src="img/explore/las-meninas-yellow.jpg" alt="Las Meninas Yellow">
         </div>
-        <div class="cleaned-container">
+        <div class="cleaned">
           <img class="cleaned" src="img/explore/las-meninas-cleaned.png" alt="Las Meninas Cleaned">
         </div>
       </div>
@@ -113,33 +117,53 @@
 
   <section id="video">
     <div class="content">
-      <div class="sub-header">
-        <h2>video journey</h2>
-        <p>Enter and visit one of the most famous museums in the world and enjoy
-          masterpieces such as Mona Lisa or Hammurabi's Code</p>
-      </div>
+      <h2>video journey</h2>
+      <p>Enter and visit one of the most famous museums in the world and enjoy
+        masterpieces such as Mona Lisa or Hammurabi's Code</p>
       <div class="large">
-        <video src=""></video>
+        <iframe
+                src="https://www.youtube.com/embed/zp1BXPX8jcU"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+        </iframe>
       </div>
-      <div class="container">
+      <div class="video-container">
         <div class="item">
-          <video src=""></video>
+          <iframe
+                  src="https://www.youtube.com/embed/NOhDysLnTvY"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen>
+          </iframe>
         </div>
         <div class="item">
-          <video src=""></video>
+          <iframe
+                  src="https://www.youtube.com/embed/Vi5D6FKhRmo"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen>
+          </iframe>
         </div>
         <div class="item">
-          <video src=""></video>
+          <iframe
+                  src="https://www.youtube.com/embed/aWmJ5DgyWPI"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen>
+          </iframe>
         </div>
       </div>
-      <div class="scroller">
-        <button><img src="icon/arrow-to-left.png" alt="To the Left"></button>
-        <div><img src="icon/active-point.png" alt="Active"></div>
-        <div><img src="icon/non-active-point.png" alt="Non-active"></div>
-        <div><img src="icon/non-active-point.png" alt="Non-active"></div>
-        <div><img src="icon/non-active-point.png" alt="Non-active"></div>
-        <div><img src="icon/non-active-point.png" alt="Non-active"></div>
-        <button><img src="icon/arrow-to-right.png" alt="To the Right"></button>
+      <div class="scroller-holder">
+        <div class="scroller">
+          <button class="arrow-holder"><img src="icon/arrow-to-left.png" alt="To the Left"></button>
+          <div class="point-holder"><img src="icon/active-point.png" alt="Active"></div>
+          <div class="point-holder"><img src="icon/non-active-point.png" alt="Non-active"></div>
+          <div class="point-holder"><img src="icon/non-active-point.png" alt="Non-active"></div>
+          <div class="point-holder"><img src="icon/non-active-point.png" alt="Non-active"></div>
+          <div class="point-holder"><img src="icon/non-active-point.png" alt="Non-active"></div>
+          <button class="arrow-holder"><img src="icon/arrow-to-right.png" alt="To the Right"></button>
+        </div>
       </div>
     </div>
   </section>
@@ -149,21 +173,21 @@
       <h2>art gallery</h2>
       <div class="container">
         <div class="column">
+          <div class="item"><img src="img/gallery/1.1-archer-and-deer.png" alt="painting"></div>
+          <div class="item"><img src="img/gallery/1.2-venus.png" alt=""></div>
+          <div class="item"><img src="img/gallery/1.3-angel.png" alt=""></div>
           <div class="item"><img src="" alt=""></div>
-          <div class="item"><img src="" alt=""></div>
-          <div class="item"><img src="" alt=""></div>
+        </div>
+        <div class="column central">
+          <div class="item"><img src="img/gallery/2.1-couple.png" alt=""></div>
+          <div class="item"><img src="img/gallery/2.2.jpg" alt=""></div>
+          <div class="item"><img src="img/gallery/2.3.jpg" alt=""></div>
           <div class="item"><img src="" alt=""></div>
         </div>
         <div class="column">
-          <div class="item"><img src="" alt=""></div>
-          <div class="item"><img src="" alt=""></div>
-          <div class="item"><img src="" alt=""></div>
-          <div class="item"><img src="" alt=""></div>
-        </div>
-        <div class="column">
-          <div class="item"><img src="" alt=""></div>
-          <div class="item"><img src="" alt=""></div>
-          <div class="item"><img src="" alt=""></div>
+          <div class="item"><img src="img/gallery/3.1.jpg" alt=""></div>
+          <div class="item"><img src="img/gallery/3.2-roof.png" alt=""></div>
+          <div class="item"><img src="img/gallery/3.3.jpg" alt=""></div>
           <div class="item"><img src="" alt=""></div>
         </div>
       </div>
@@ -175,39 +199,104 @@
       <h2>buy tickets</h2>
       <div class="bar"></div>
       <div class="container">
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="item">
+          <img src="img/tickets/chronos.jpg" alt="Chronos">
+        </div>
+        <div class="item">
+          <div class="ticket-type">
+            <h5>Ticket Type</h5>
+            <ul>
+              <li>
+                <input type="radio" name="ticket-type" id="permanent" value="permanent">
+                <label for="permanent">Permanent exhibition</label>
+              </li>
+              <li>
+                <input type="radio" name="ticket-type" id="temporary" value="temporary">
+                <label for="temporary">Temporary exhibition</label>
+              </li>
+              <li>
+                <input type="radio" name="ticket-type" id="combined" value="combined">
+                <label for="combined">Combined Admission</label>
+              </li>
+            </ul>
+          </div>
+          <div class="amount">
+            <h5>Amount</h5>
+            <div class="ticket-pick basic">
+              <label for="basic-tickets">Basic 18+</label>
+              <div class="counter">
+                <button class="decrement">−</button>
+                <input type="number" id="basic-tickets" value="1" min="0" disabled>
+                <button class="increment">+</button>
+              </div>
+            </div>
+            <div class="ticket-pick senior">
+              <label for="senior-tickets">Senior 65+</label>
+              <div class="counter">
+                <button>−</button>
+                <input type="number" id="senior-tickets" value="1" min="0" disabled>
+                <button>+</button>
+              </div>
+            </div>
+            <h5 id="total">Total €</h5>
+            <button id="buy">Buy Now</button>
+          </div>
+        </div>
       </div>
-      <div class="sub-footer"></div>
     </div>
   </section>
+
+  <div class="hall">
+    <img src="img/hall.jpg" alt="Hall">
+  </div>
 
   <section id="contacts">
     <div class="content">
       <h2>contacts</h2>
       <div class="bar"></div>
       <div class="container">
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="description">
+          <h5>Palais Royal Musee du Louvre</h5>
+          <ul>
+            <li>address: 75001 Paris, France</li>
+            <li>phone: +33(0) 1 40 20 50 50</li>
+            <li>mail: info@louvre.fr</li>
+          </ul>
+        </div>
+        <div id="map">
+          <iframe
+                  width="960"
+                  height="620"
+                  style="border:0"
+                  loading="lazy"
+                  allowfullscreen
+                  referrerpolicy="no-referrer-when-downgrade"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.888914212762!2d2.3349079!3d48.8606119!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671d877e2f569%3A0x7cd8f71c0d57e4f0!2sLouvre%20Museum!5e0!3m2!1sen!2sfr!4v1629218377734!5m2!1sen!2sfr">
+          </iframe>
+        </div>
       </div>
     </div>
   </section>
-
-  <footer>
-    <div class="upper-container">
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-    </div>
-    <div class="bar"></div>
-    <div class="lower-container">
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-    </div>
-  </footer>
-
 </main>
+<footer>
+  <div class="content">
+    <div class="logo">
+      <img class="pyramid" src="icon/pyramid.png" alt="pyramid">
+      <h3>Louvre</h3>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#visiting">Visiting</a></li>
+        <li><a href="#explore">Explore</a></li>
+        <li><a href="#video">Video</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#tickets">Tickets</a></li>
+        <li><a href="#contacts">Contacts</a></li>
+      </ul>
+    </nav>
+    <div class="social"></div>
+    <div class="bottom"></div>
+  </div>
+</footer>
 </body>
 </html>
