--- a/index.html
+++ b/index.html
@@ -294,8 +294,21 @@
         <li><a href="#contacts">Contacts</a></li>
       </ul>
     </nav>
-    <div class="social"></div>
-    <div class="bottom"></div>
+    <div class="social">
+      <img src="icon/footer/yuotube.png" alt="YouTube">
+      <img src="icon/footer/instagram.png" alt="Instagram">
+      <img src="icon/footer/facebook.png" alt="FB">
+      <img src="icon/footer/x.png" alt="X">
+      <img src="icon/footer/pinterest.png" alt="Pinterest">
+    </div>
+    <div class="bar"></div>
+    <div class="bottom">
+      <ul>
+        <li>© 2021</li>
+        <li>The Rolling Scopes School</li>
+        <li>Jehaierys</li>
+      </ul>
+    </div>
   </div>
 </footer>
 </body>
