--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Louvre</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="common.css">
+  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/common.css">
+  <link rel="stylesheet" href="style/header.css">
+  <link rel="stylesheet" href="style/welcome.css">
+  <link rel="stylesheet" href="style/visiting.css">
 </head>
 <body>
 <header>
@@ -29,15 +32,37 @@
   <section id="welcome">
     <div class="content">
       <div class="text-content">
-        <h1>WELCOME<br> TO THE LOUVRE</h1>
+        <h1>WELCOME<br>TO THE LOUVRE</h1>
         <h4>From the castle to the museum</h4>
-        <button>
+        <button class="discover-button">
           <a href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">
             <span>Discover the Louvre</span>
           </a>
         </button>
       </div>
       <img src="img/joconda.png" alt="Mona Lisa">
+      <div class="welcome-slider-io">
+        <div class="welcome-slider-io-metadata">
+          <div id="welcome-slider-current-picture">01</div>
+          <div class="bar"></div>
+          <div id="total-pictures">05</div>
+        </div>
+        <div class="welcome-slider-io-pointer">
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+        </div>
+        <div class="welcome-slider-io-swiper">
+          <div class="welcome-slider-io-left-arrow">
+            <img src="icon/welcome/right-arrow.png" alt="Go to the Left">
+          </div>
+          <div class="welcome-slider-io-right-arrow">
+            <img src="icon/welcome/right-arrow.png" alt="Go to the Right">
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -49,42 +74,42 @@
         <div class="panorama">
           <img src="img/visiting/royal-place.png" alt="Royal Place">
           <h3>royal palace</h3>
-          <div class="bar"></div>
+          <div class="panorama-bar"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
         <div class="panorama">
           <img src="img/visiting/demon-wing.png" alt="Demon Wing">
           <h3>demon wing</h3>
-          <div class="bar"></div>
+          <div class="panorama-bar"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
         <div class="panorama">
           <img src="img/visiting/colonnade-perrault.png" alt="Colonnade Perrault">
           <h3>colonnade perrault</h3>
-          <div class="bar"></div>
+          <div class="panorama-bar"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
         <div class="panorama">
           <img src="img/visiting/greek-hall.png" alt="Greek Hall">
           <h3>greek hall</h3>
-          <div class="bar"></div>
+          <div class="panorama-bar"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
         <div class="panorama">
           <img src="img/visiting/mona-lisa.png" alt="Mona Lisa">
           <h3>mona lisa</h3>
-          <div class="bar"></div>
+          <div class="panorama-bar"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
         <div class="panorama">
           <img src="img/visiting/night-palace.png" alt="Night Palace">
           <h3>night palace</h3>
-          <div class="bar"></div>
+          <div class="panorama-bar"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
@@ -176,19 +201,19 @@
           <div class="item"><img src="img/gallery/1.1-archer-and-deer.png" alt="painting"></div>
           <div class="item"><img src="img/gallery/1.2-venus.png" alt=""></div>
           <div class="item"><img src="img/gallery/1.3-angel.png" alt=""></div>
-          <div class="item"><img src="" alt=""></div>
+          <div class="item"><img src="img/gallery/1.4.png" alt=""></div>
         </div>
         <div class="column central">
           <div class="item"><img src="img/gallery/2.1-couple.png" alt=""></div>
           <div class="item"><img src="img/gallery/2.2.jpg" alt=""></div>
           <div class="item"><img src="img/gallery/2.3.jpg" alt=""></div>
-          <div class="item"><img src="" alt=""></div>
+          <div class="item"><img src="img/gallery/2.4.png" alt=""></div>
         </div>
         <div class="column">
           <div class="item"><img src="img/gallery/3.1.jpg" alt=""></div>
           <div class="item"><img src="img/gallery/3.2-roof.png" alt=""></div>
           <div class="item"><img src="img/gallery/3.3.jpg" alt=""></div>
-          <div class="item"><img src="" alt=""></div>
+          <div class="item"><img src="img/gallery/3.4.jpg" alt=""></div>
         </div>
       </div>
     </div>
@@ -311,5 +336,7 @@
     </div>
   </div>
 </footer>
+
+<script src="scrypt/visiting.js"></script>
 </body>
 </html>
