--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <link rel="stylesheet" href="style/header.css">
   <link rel="stylesheet" href="style/welcome.css">
   <link rel="stylesheet" href="style/visiting.css">
+  <link rel="stylesheet" href="style/explore.css">
+  <link rel="stylesheet" href="style/gallery.css">
+  <link rel="stylesheet" href="style/tickets.css">
 </head>
 <body>
 <header>
   <div id="line">
     <div class="logo">
-      <img class="pyramid" src="icon/pyramid.png" alt="pyramid">
+      <img class="pyramid" src="icon/pyramid.svg" alt="pyramid">
       <h3>Louvre</h3>
     </div>
     <nav>
@@ -48,18 +51,18 @@
           <div id="total-pictures">05</div>
         </div>
         <div class="welcome-slider-io-pointer">
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
+          <button class="welcome-slider-io-point"></button>
+          <button class="welcome-slider-io-point"></button>
+          <button class="welcome-slider-io-point"></button>
+          <button class="welcome-slider-io-point"></button>
+          <button class="welcome-slider-io-point"></button>
         </div>
         <div class="welcome-slider-io-swiper">
           <div class="welcome-slider-io-left-arrow">
-            <img src="icon/welcome/right-arrow.png" alt="Go to the Left">
+            <img src="icon/welcome/right-arrow.svg" alt="Go to the Left">
           </div>
           <div class="welcome-slider-io-right-arrow">
-            <img src="icon/welcome/right-arrow.png" alt="Go to the Right">
+            <img src="icon/welcome/right-arrow.svg" alt="Go to the Right">
           </div>
         </div>
       </div>
@@ -129,12 +132,12 @@
         <p class="third">The cleaning provoked furious protests, not because the picture had
           been damaged in any way, but because it looked different.</p>
       </div>
-      <div class="slide-content">
-        <div class="yellow">
-          <img class="yellow" src="img/explore/las-meninas-yellow.jpg" alt="Las Meninas Yellow">
+      <div class="meninas-content">
+        <div class="meninas-yellow-container">
+          <img class="meninas-yellow" src="img/explore/las-meninas-yellow.jpg" alt="Las Meninas Yellow">
         </div>
-        <div class="cleaned">
-          <img class="cleaned" src="img/explore/las-meninas-cleaned.png" alt="Las Meninas Cleaned">
+        <div class="meninas-cleaned-container">
+          <img class="meninas-cleaned" src="img/explore/las-meninas-cleaned.png" alt="Las Meninas Cleaned">
         </div>
       </div>
     </div>
@@ -181,13 +184,13 @@
       </div>
       <div class="scroller-holder">
         <div class="scroller">
-          <button class="arrow-holder"><img src="icon/arrow-to-left.png" alt="To the Left"></button>
-          <div class="point-holder"><img src="icon/active-point.png" alt="Active"></div>
-          <div class="point-holder"><img src="icon/non-active-point.png" alt="Non-active"></div>
-          <div class="point-holder"><img src="icon/non-active-point.png" alt="Non-active"></div>
-          <div class="point-holder"><img src="icon/non-active-point.png" alt="Non-active"></div>
-          <div class="point-holder"><img src="icon/non-active-point.png" alt="Non-active"></div>
-          <button class="arrow-holder"><img src="icon/arrow-to-right.png" alt="To the Right"></button>
+          <button class="arrow-holder"><img src="icon/video/left-arrow.svg" alt="To the Left"></button>
+          <div class="point-holder"><img src="icon/video/point.svg" alt="Active"></div>
+          <div class="point-holder"><img src="icon/video/point.svg" alt="Non-active"></div>
+          <div class="point-holder"><img src="icon/video/point.svg" alt="Non-active"></div>
+          <div class="point-holder"><img src="icon/video/point.svg" alt="Non-active"></div>
+          <div class="point-holder"><img src="icon/video/point.svg" alt="Non-active"></div>
+          <button class="arrow-holder"><img src="icon/video/right-arrow.svg" alt="To the Right"></button>
         </div>
       </div>
     </div>
@@ -198,23 +201,24 @@
       <h2>art gallery</h2>
       <div class="container">
         <div class="column">
-          <div class="item"><img src="img/gallery/1.1-archer-and-deer.png" alt="painting"></div>
-          <div class="item"><img src="img/gallery/1.2-venus.png" alt=""></div>
-          <div class="item"><img src="img/gallery/1.3-angel.png" alt=""></div>
-          <div class="item"><img src="img/gallery/1.4.png" alt=""></div>
+          <div class="picture"><img src="img/gallery/1.1-archer-and-deer.png" alt="painting"></div>
+          <div class="picture"><img src="img/gallery/1.2-venus.png" alt="painting"></div>
+          <div class="picture"><img src="img/gallery/1.3-angel.png" alt="painting"></div>
+          <div class="picture"><img src="img/gallery/1.4.png" alt="painting"></div>
         </div>
         <div class="column central">
-          <div class="item"><img src="img/gallery/2.1-couple.png" alt=""></div>
-          <div class="item"><img src="img/gallery/2.2.jpg" alt=""></div>
-          <div class="item"><img src="img/gallery/2.3.jpg" alt=""></div>
-          <div class="item"><img src="img/gallery/2.4.png" alt=""></div>
+          <div class="picture"><img src="img/gallery/2.1-couple.png" alt="painting"></div>
+          <div class="picture"><img src="img/gallery/2.2.jpg" alt="painting"></div>
+          <div class="picture"><img src="img/gallery/2.3.jpg" alt="painting"></div>
+          <div class="picture"><img src="img/gallery/2.4.png" alt="painting"></div>
         </div>
         <div class="column">
-          <div class="item"><img src="img/gallery/3.1.jpg" alt=""></div>
-          <div class="item"><img src="img/gallery/3.2-roof.png" alt=""></div>
-          <div class="item"><img src="img/gallery/3.3.jpg" alt=""></div>
-          <div class="item"><img src="img/gallery/3.4.jpg" alt=""></div>
+          <div class="picture"><img src="img/gallery/3.1.jpg" alt="painting"></div>
+          <div class="picture"><img src="img/gallery/3.2-roof.png" alt="painting"></div>
+          <div class="picture"><img src="img/gallery/3.3.jpg" alt="painting"></div>
+          <div class="picture"><img src="img/gallery/3.4.jpg" alt="painting"></div>
         </div>
+        <div class="gallery-fogging"></div>
       </div>
     </div>
   </section>
@@ -306,7 +310,7 @@
 <footer>
   <div class="content">
     <div class="logo">
-      <img class="pyramid" src="icon/pyramid.png" alt="pyramid">
+      <img class="pyramid" src="icon/pyramid.svg" alt="pyramid">
       <h3>Louvre</h3>
     </div>
     <nav>
@@ -329,7 +333,7 @@
     <div class="bar"></div>
     <div class="bottom">
       <ul>
-        <li>© 2021</li>
+        <li>© 2025</li>
         <li>The Rolling Scopes School</li>
         <li>Jehaierys</li>
       </ul>
