fix: shift welcome-slider-io-metadata to the right

--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
         <div class="meninas-cleaned-container">
           <img class="meninas-cleaned" src="img/explore/las-meninas-cleaned.png" alt="Las Meninas Cleaned">
         </div>
+        <div class="meninas-branch-container">
+          <img src="icon/explore/branch.svg" alt="branch" class="meninas-branch">
+        </div>
       </div>
     </div>
   </section>
