refactor: class name changes

--- a/index.html
+++ b/index.html
@@ -151,33 +151,37 @@
       <h2>video journey</h2>
       <p>Enter and visit one of the most famous museums in the world and enjoy
         masterpieces such as Mona Lisa or Hammurabi's Code</p>
-      <div class="large">
+      <div class="video-large-container">
         <iframe
+                class="video-large"
                 src="https://www.youtube.com/embed/zp1BXPX8jcU"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen>
         </iframe>
       </div>
-      <div class="video-container">
-        <div class="item">
+      <div class="video-petite-container">
+        <div class="video-petite-holder">
           <iframe
+                  class="video-petite"
                   src="https://www.youtube.com/embed/NOhDysLnTvY"
                   title="YouTube video player"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   allowfullscreen>
           </iframe>
         </div>
-        <div class="item">
+        <div class="video-petite-holder">
           <iframe
+                  class="video-petite"
                   src="https://www.youtube.com/embed/Vi5D6FKhRmo"
                   title="YouTube video player"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   allowfullscreen>
           </iframe>
         </div>
-        <div class="item">
+        <div class="video-petite-holder">
           <iframe
+                  class="video-petite"
                   src="https://www.youtube.com/embed/aWmJ5DgyWPI"
                   title="YouTube video player"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -345,6 +349,8 @@
     </div>
   </div>
 </footer>
+
+<script src="https://www.youtube.com/iframe_api"></script>
 
 <script src="scrypt/visiting.js"></script>
 <script src="scrypt/tickets.js"></script>
