feat: adaptive developing started

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="style/explore.css">
   <link rel="stylesheet" href="style/gallery.css">
   <link rel="stylesheet" href="style/tickets.css">
+  <link rel="stylesheet" href="style/video.css">
+  <link rel="stylesheet" href="style/contacts.css">
+  <link rel="stylesheet" href="style/footer.css">
 </head>
 <body>
 <header>
