feat: continue to adapt it

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="style/video.css">
   <link rel="stylesheet" href="style/contacts.css">
   <link rel="stylesheet" href="style/footer.css">
+  <link rel="stylesheet" href="style/parallax.css">
 </head>
 <body>
 <header>
