feat: 1024px is almost done

--- a/index.html
+++ b/index.html
@@ -307,9 +307,7 @@
         </div>
         <div id="map">
           <iframe
-                  width="960"
-                  height="620"
-                  style="border:0"
+                  class="map-frame"
                   loading="lazy"
                   allowfullscreen
                   referrerpolicy="no-referrer-when-downgrade"
