--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
       <h3>Louvre</h3>
     </div>
     <nav>
+      <button class="menu-button">
+        <svg width="32" height="18" viewBox="0 0 32 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect width="32" height="2" fill="white"/>
+          <rect y="8" width="32" height="2" fill="white"/>
+          <rect y="16" width="32" height="2" fill="white"/>
+        </svg>
+      </button>
       <ul>
         <li><a href="#visiting">Visiting</a></li>
         <li><a href="#explore">Explore</a></li>
@@ -47,7 +54,10 @@
           </a>
         </button>
       </div>
-      <img src="img/joconda.png" alt="Mona Lisa">
+      <div class="joconda-holder">
+        <div class="joconda-shadow"></div>
+        <img src="img/joconda.jpg" alt="Mona Lisa">
+      </div>
       <div class="welcome-slider-io">
         <div class="welcome-slider-io-metadata">
           <div id="welcome-slider-current-picture">01</div>
@@ -81,42 +91,42 @@
         <div class="panorama">
           <img src="img/visiting/royal-place.png" alt="Royal Place">
           <h3>royal palace</h3>
-          <div class="panorama-bar"></div>
+          <div class="panorama-bar bar-non-hover"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
         <div class="panorama">
           <img src="img/visiting/demon-wing.png" alt="Demon Wing">
           <h3>demon wing</h3>
-          <div class="panorama-bar"></div>
+          <div class="panorama-bar bar-non-hover"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
         <div class="panorama">
           <img src="img/visiting/colonnade-perrault.png" alt="Colonnade Perrault">
           <h3>colonnade perrault</h3>
-          <div class="panorama-bar"></div>
+          <div class="panorama-bar bar-non-hover"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
         <div class="panorama">
           <img src="img/visiting/greek-hall.png" alt="Greek Hall">
           <h3>greek hall</h3>
-          <div class="panorama-bar"></div>
+          <div class="panorama-bar bar-non-hover"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
         <div class="panorama">
           <img src="img/visiting/mona-lisa.png" alt="Mona Lisa">
           <h3>mona lisa</h3>
-          <div class="panorama-bar"></div>
+          <div class="panorama-bar bar-non-hover"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
         <div class="panorama">
           <img src="img/visiting/night-palace.png" alt="Night Palace">
           <h3>night palace</h3>
-          <div class="panorama-bar"></div>
+          <div class="panorama-bar bar-non-hover"></div>
           <p class="top">360° Virtual Tour</p>
           <p class="bottom">Google Street Panorama View</p>
         </div>
