--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Louvre Museum Web Site">
   <title>Louvre</title>
+  <link rel="preload" href="font/Roboto-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/common.css">
   <link rel="stylesheet" href="style/header.css">
@@ -237,20 +240,20 @@
       <h2>art gallery</h2>
       <div class="container">
         <div class="column">
-          <div class="picture" id="archer-and-deer"><img src="img/gallery/1.1-archer-and-deer.png" alt="painting"></div>
-          <div class="picture" id="madame"><img src="img/gallery/1.2-venus.png" alt="painting"></div>
-          <div class="picture" id="angel"><img src="img/gallery/1.3-angel.png" alt="painting"></div>
-          <div class="picture" id="girls-in-the-field"><img src="img/gallery/1.4.png" alt="painting"></div>
+          <div class="picture" id="archer-and-deer"><img src="img/gallery/1.1-archer-and-deer.webp" alt="painting"></div>
+          <div class="picture" id="madame"><img src="img/gallery/1.2-venus_1.webp" alt="painting"></div>
+          <div class="picture" id="angel"><img src="img/gallery/1.3-angel.webp" alt="painting"></div>
+          <div class="picture" id="girls-in-the-field"><img src="img/gallery/1.4.webp" alt="painting"></div>
         </div>
         <div class="column central">
-          <div class="picture" id="couple"><img src="img/gallery/2.1-couple.png" alt="painting"></div>
+          <div class="picture" id="couple"><img src="img/gallery/2.1-couple_1.webp" alt="painting"></div>
           <div class="picture" id="stairs"><img src="img/gallery/2.2.jpg" alt="painting"></div>
           <div class="picture" id="arch" ><img src="img/gallery/2.3.jpg" alt="painting"></div>
-          <div class="picture" id="venus"><img src="img/gallery/2.4.png" alt="painting"></div>
+          <div class="picture" id="venus"><img src="img/gallery/2.4.webp" alt="painting"></div>
         </div>
         <div class="column">
           <div class="picture" id="joconda"><img src="img/gallery/3.1.jpg" alt="painting"></div>
-          <div class="picture" id="roof"><img src="img/gallery/3.2-roof.png" alt="painting"></div>
+          <div class="picture" id="roof"><img src="img/gallery/3.2-roof.webp" alt="painting"></div>
           <div class="picture" id="pyramids"><img src="img/gallery/3.3.jpg" alt="painting"></div>
           <div class="picture" id="party"><img src="img/gallery/3.4.jpg" alt="painting"></div>
         </div>
