--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <link rel="icon" type="image/x-icon" href="icon/france.png">
 </head>
-<body>
-<header class="menu-closed">
+<body class="menu-closed-body" onload="NavigationMenuFacade.addScrollLimiter()">
+<header class="menu-closed-header">
   <div id="line">
     <div class="logo">
       <img class="pyramid" src="icon/pyramid.svg" alt="pyramid">
@@ -30,29 +30,70 @@
     </div>
     <nav>
       <button class="menu-button" onclick="NavigationMenuFacade.switchMenuState()">
-        <svg class="pancake" width="32" height="18" viewBox="0 0 32 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="pancake" viewBox="0 0 32 18" xmlns="http://www.w3.org/2000/svg">
           <rect width="32" height="2" fill="white"/>
           <rect y="8" width="32" height="2" fill="white"/>
           <rect y="16" width="32" height="2" fill="white"/>
         </svg>
-        <svg class="cross" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="cross" width="25" height="25" viewBox="0 0 25 25"xmlns="http://www.w3.org/2000/svg">
           <rect width="33.2612" height="2.07882" transform="matrix(0.7068 0.707413 -0.7068 0.707413 1.47046 0)" fill="white"/>
           <rect width="33.2612" height="2.07883" transform="matrix(0.707413 -0.706801 0.707413 0.706801 0 23.5093)" fill="white"/>
         </svg>
       </button>
       <ul>
-        <li><a href="#visiting"><span class="section">Visiting</span><img src="icon/header-menu-arrow.svg" alt="arrow"></a></li>
-        <li><a href="#explore"><span class="section">Explore</span><img src="icon/header-menu-arrow.svg" alt="arrow"></a></li>
-        <li><a href="#video"><span class="section">Video</span><img src="icon/header-menu-arrow.svg" alt="arrow"></a></li>
-        <li><a href="#gallery"><span class="section">Gallery</span><img src="icon/header-menu-arrow.svg" alt="arrow"></a></li>
-        <li><a href="#tickets"><span class="section">Tickets</span><img src="icon/header-menu-arrow.svg" alt="arrow"></a></li>
-        <li><a href="#contacts"><span class="section">Contacts</span><img src="icon/header-menu-arrow.svg" alt="arrow"></a></li>
+        <li>
+          <a href="#visiting">
+            <span class="section">Visiting</span>
+            <svg class="header-menu-arrow" viewBox="0 0 8 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7.33352 5.53176L1.99337 0.191706C1.86985 0.068097 1.70498 0 1.52917 0C1.35337 0 1.18849 0.068097 1.06498 0.191706L0.671718 0.584873C0.415818 0.841066 0.415818 1.25745 0.671718 1.51326L5.15597 5.99751L0.666742 10.4867C0.543231 10.6104 0.475037 10.7751 0.475037 10.9508C0.475037 11.1267 0.543231 11.2915 0.666742 11.4152L1.06001 11.8083C1.18362 11.9319 1.3484 12 1.5242 12C1.7 12 1.86488 11.9319 1.98839 11.8083L7.33352 6.46336C7.45732 6.33936 7.52532 6.1738 7.52493 5.99781C7.52532 5.82112 7.45732 5.65566 7.33352 5.53176Z" fill="white"/>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#explore">
+            <span class="section">Explore</span>
+            <svg class="header-menu-arrow" viewBox="0 0 8 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7.33352 5.53176L1.99337 0.191706C1.86985 0.068097 1.70498 0 1.52917 0C1.35337 0 1.18849 0.068097 1.06498 0.191706L0.671718 0.584873C0.415818 0.841066 0.415818 1.25745 0.671718 1.51326L5.15597 5.99751L0.666742 10.4867C0.543231 10.6104 0.475037 10.7751 0.475037 10.9508C0.475037 11.1267 0.543231 11.2915 0.666742 11.4152L1.06001 11.8083C1.18362 11.9319 1.3484 12 1.5242 12C1.7 12 1.86488 11.9319 1.98839 11.8083L7.33352 6.46336C7.45732 6.33936 7.52532 6.1738 7.52493 5.99781C7.52532 5.82112 7.45732 5.65566 7.33352 5.53176Z" fill="white"/>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#video"><span class="section">Video</span>
+            <svg class="header-menu-arrow" viewBox="0 0 8 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7.33352 5.53176L1.99337 0.191706C1.86985 0.068097 1.70498 0 1.52917 0C1.35337 0 1.18849 0.068097 1.06498 0.191706L0.671718 0.584873C0.415818 0.841066 0.415818 1.25745 0.671718 1.51326L5.15597 5.99751L0.666742 10.4867C0.543231 10.6104 0.475037 10.7751 0.475037 10.9508C0.475037 11.1267 0.543231 11.2915 0.666742 11.4152L1.06001 11.8083C1.18362 11.9319 1.3484 12 1.5242 12C1.7 12 1.86488 11.9319 1.98839 11.8083L7.33352 6.46336C7.45732 6.33936 7.52532 6.1738 7.52493 5.99781C7.52532 5.82112 7.45732 5.65566 7.33352 5.53176Z" fill="white"/>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#gallery">
+            <span class="section">Gallery</span>
+            <svg class="header-menu-arrow" viewBox="0 0 8 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7.33352 5.53176L1.99337 0.191706C1.86985 0.068097 1.70498 0 1.52917 0C1.35337 0 1.18849 0.068097 1.06498 0.191706L0.671718 0.584873C0.415818 0.841066 0.415818 1.25745 0.671718 1.51326L5.15597 5.99751L0.666742 10.4867C0.543231 10.6104 0.475037 10.7751 0.475037 10.9508C0.475037 11.1267 0.543231 11.2915 0.666742 11.4152L1.06001 11.8083C1.18362 11.9319 1.3484 12 1.5242 12C1.7 12 1.86488 11.9319 1.98839 11.8083L7.33352 6.46336C7.45732 6.33936 7.52532 6.1738 7.52493 5.99781C7.52532 5.82112 7.45732 5.65566 7.33352 5.53176Z" fill="white"/>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#tickets">
+            <span class="section">Tickets</span>
+            <svg class="header-menu-arrow" viewBox="0 0 8 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7.33352 5.53176L1.99337 0.191706C1.86985 0.068097 1.70498 0 1.52917 0C1.35337 0 1.18849 0.068097 1.06498 0.191706L0.671718 0.584873C0.415818 0.841066 0.415818 1.25745 0.671718 1.51326L5.15597 5.99751L0.666742 10.4867C0.543231 10.6104 0.475037 10.7751 0.475037 10.9508C0.475037 11.1267 0.543231 11.2915 0.666742 11.4152L1.06001 11.8083C1.18362 11.9319 1.3484 12 1.5242 12C1.7 12 1.86488 11.9319 1.98839 11.8083L7.33352 6.46336C7.45732 6.33936 7.52532 6.1738 7.52493 5.99781C7.52532 5.82112 7.45732 5.65566 7.33352 5.53176Z" fill="white"/>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#contacts">
+            <span class="section">Contacts</span>
+            <svg class="header-menu-arrow" width="8" height="12" viewBox="0 0 8 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7.33352 5.53176L1.99337 0.191706C1.86985 0.068097 1.70498 0 1.52917 0C1.35337 0 1.18849 0.068097 1.06498 0.191706L0.671718 0.584873C0.415818 0.841066 0.415818 1.25745 0.671718 1.51326L5.15597 5.99751L0.666742 10.4867C0.543231 10.6104 0.475037 10.7751 0.475037 10.9508C0.475037 11.1267 0.543231 11.2915 0.666742 11.4152L1.06001 11.8083C1.18362 11.9319 1.3484 12 1.5242 12C1.7 12 1.86488 11.9319 1.98839 11.8083L7.33352 6.46336C7.45732 6.33936 7.52532 6.1738 7.52493 5.99781C7.52532 5.82112 7.45732 5.65566 7.33352 5.53176Z" fill="white"/>
+            </svg>
+          </a>
+        </li>
       </ul>
     </nav>
   </div>
 </header>
 <main>
-  <section id="welcome" class="menu-closed">
+  <section id="welcome" class="menu-closed-welcome">
     <div class="content">
       <div class="text-content">
         <h1>WELCOME<br>TO THE LOUVRE</h1>
@@ -88,6 +129,11 @@
             <img src="icon/welcome/right-arrow.svg" alt="Go to the Right">
           </div>
         </div>
+      </div>
+      <div class="main-menu-panorama">
+        <div class="sunset-holder"><img src="img/menu-1.jpg" alt="Sunset"></div>
+        <div class="hall-holder"><img src="img/menu-2.jpg" alt="Hall"></div>
+        <div class="view-holder"><img src="img/menu-3.jpg" alt="View"></div>
       </div>
     </div>
   </section>
@@ -245,7 +291,7 @@
           <div class="picture" id="angel"><img src="img/gallery/1.3-angel.webp" alt="painting"></div>
           <div class="picture" id="girls-in-the-field"><img src="img/gallery/1.4.webp" alt="painting"></div>
         </div>
-        <div class="column central">
+        <div class="column upper">
           <div class="picture" id="couple"><img src="img/gallery/2.1-couple_1.webp" alt="painting"></div>
           <div class="picture" id="stairs"><img src="img/gallery/2.2.jpg" alt="painting"></div>
           <div class="picture" id="arch" ><img src="img/gallery/2.3.jpg" alt="painting"></div>
@@ -346,7 +392,7 @@
     </div>
   </section>
 </main>
-<footer>
+<footer class="menu-closed-footer">
   <div class="content">
     <div class="logo">
       <img class="pyramid" src="icon/pyramid.svg" alt="pyramid">
