--- a/index.html
+++ b/index.html
@@ -280,12 +280,36 @@
       </div>
       <div class="scroller">
         <button class="arrow-holder"><img src="icon/video/left-arrow.svg" alt="To the Left"></button>
-        <button class="point-holder"><img src="icon/video/point.svg" alt="Active"></button>
-        <button class="point-holder"><img src="icon/video/point.svg" alt="Non-active"></button>
-        <button class="point-holder"><img src="icon/video/point.svg" alt="Non-active"></button>
-        <button class="point-holder"><img src="icon/video/point.svg" alt="Non-active"></button>
-        <button class="point-holder"><img src="icon/video/point.svg" alt="Non-active"></button>
-        <button class="arrow-holder"><img src="icon/video/right-arrow.svg" alt="To the Right"></button>
+        <button class="point-holder">
+          <svg viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="6" cy="6" r="6" fill="#999999"/>
+          </svg>
+        </button>
+        <button class="point-holder">
+          <svg viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="6" cy="6" r="6" fill="#999999"/>
+          </svg>
+        </button>
+        <button class="point-holder">
+          <svg viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="6" cy="6" r="6" fill="#999999"/>
+          </svg>
+        </button>
+        <button class="point-holder">
+          <svg viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="6" cy="6" r="6" fill="#999999"/>
+          </svg>
+        </button>
+        <button class="point-holder">
+          <svg viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="6" cy="6" r="6" fill="#999999"/>
+          </svg>
+        </button>
+        <button class="arrow-holder">
+          <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.348163 0.219168C0.748196 -0.125842 1.33192 -0.0559202 1.65195 0.375342L5.82586 6.00004L1.65194 11.6247C1.33192 12.056 0.748195 12.1259 0.348162 11.7809C-0.0518709 11.4359 -0.116729 10.8066 0.203297 10.3753L3.45008 6.00004L0.203298 1.62473C-0.116728 1.19347 -0.05187 0.564177 0.348163 0.219168ZM4.5223 0.219168C4.92234 -0.125841 5.50606 -0.0559197 5.82609 0.375342L10 6.00004L5.82609 11.6247C5.50606 12.056 4.92234 12.1259 4.5223 11.7809C4.12227 11.4359 4.05741 10.8066 4.37744 10.3753L7.62422 6.00004L4.37744 1.62473C4.05741 1.19347 4.12227 0.564178 4.5223 0.219168Z" fill="#999999"/>
+          </svg>
+        </button>
       </div>
     </div>
   </section>
@@ -448,7 +472,8 @@
 <script src="scrypt/welcome/point-swiper.js"></script>
 <script src="scrypt/welcome/touch-swiper.js"></script>
 <script src="scrypt/welcome/dispatcher.js"></script>
-<script src="scrypt/gallery.js"></script>
+<script src="scrypt/gallery/gallery-arranger.js"></script>
+<script src="scrypt/gallery/animator.js"></script>
 <script src="scrypt/navigationMenuFacade.js"></script>
 <script src="scrypt/visiting.js"></script>
 <script src="scrypt/tickets.js"></script>
