refactor: some video class names changed to BEM

--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
         <input type="range" id="large-video-progress" value="0" min="0" max="100">
         <input type="range" id="large-video-volume" value="100" min="0" max="100">
       </div>
-      <div class="video-petite-container">
-        <div class="video-petite-holder">
+      <div class="video__petite-container">
+        <div class="video__petite-holder">
           <iframe
                   class="video-petite"
                   src="https://www.youtube.com/embed/NOhDysLnTvY"
@@ -256,7 +256,7 @@
                   allowfullscreen>
           </iframe>
         </div>
-        <div class="video-petite-holder">
+        <div class="video__petite-holder">
           <iframe
                   class="video-petite"
                   src="https://www.youtube.com/embed/Vi5D6FKhRmo"
@@ -265,7 +265,7 @@
                   allowfullscreen>
           </iframe>
         </div>
-        <div class="video-petite-holder">
+        <div class="video__petite-holder">
           <iframe
                   class="video-petite"
                   src="https://www.youtube.com/embed/aWmJ5DgyWPI"
