refactor: add AnimationScript, its builder, rebuild disabler according to visitor pattern. Delete from disabler useless code

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 
 <script src="scrypt/welcome/switcher.js"></script>
 <script src="scrypt/welcome/tracker.js"></script>
-<script src="scrypt/welcome/disabler.js"></script>
+<script src="scrypt/util/SliderSwipingDisablerVisitor.js"></script>
 <script src="scrypt/welcome/abstraction.js"></script>
 <script src="scrypt/welcome/arrow-swiper.js"></script>
 <script src="scrypt/welcome/point-swiper.js"></script>
