refactor: rearrange welcomeSlider variable definition, cleaned Bootstrap - onDomContentLoaded only initialize() method called

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <rect y="8" width="32" height="2" fill="white"/>
           <rect y="16" width="32" height="2" fill="white"/>
         </svg>
-        <svg class="cross" width="25" height="25" viewBox="0 0 25 25"xmlns="http://www.w3.org/2000/svg">
+        <svg class="cross" width="25" height="25" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg">
           <rect width="33.2612" height="2.07882" transform="matrix(0.7068 0.707413 -0.7068 0.707413 1.47046 0)" fill="white"/>
           <rect width="33.2612" height="2.07883" transform="matrix(0.707413 -0.706801 0.707413 0.706801 0 23.5093)" fill="white"/>
         </svg>
@@ -446,6 +446,8 @@
   </div>
 </footer>
 
+<script src="scrypt/PreDefinition.js"></script>
+
 <script src="scrypt/navigationMenuFacade.js"></script>
 
 <script src="scrypt/util/AnimationScript.js"></script>
@@ -467,7 +469,7 @@
 <script src="scrypt/gallery/GalleryArranger.js"></script>
 <script src="scrypt/gallery/GalleryAnimator.js"></script>
 
-<script src="https://www.youtube.com/iframe_api"></script>
+<!--<script src="https://www.youtube.com/iframe_api"></script>-->
 <script src="scrypt/video/VideoLoader.js"></script>
 <script src="scrypt/video/VideoCycle.js"></script>
 <script src="scrypt/video/VideoArranger.js"></script>
