prepare to stub video section

--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
       <div class="text-content">
         <h1>WELCOME<br>TO THE LOUVRE</h1>
         <h4>From the castle to the museum</h4>
-        <button class="discover-button">
-          <a href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">
+        <div class="discover-button">
+          <a href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/
+          data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">
             <span>Discover the Louvre</span>
           </a>
-        </button>
+        </div>
       </div>
       <div class="picture-holder">
         <div class="picture-shadow"></div>
@@ -156,7 +157,8 @@
       <div class="bar"></div>
       <div class="panorama-container">
         <div class="panorama">
-          <a href="https://www.google.com/maps/@48.8606882,2.3356791,3a,90y,328.36h,87.55t/data=!3m7!1e1!3m5!1sAF1QipMZ9YgnArbwEIbTDANeSQYFu9gNqpW_2Sv8FBvY!2e10!3e12!7i4352!8i1815">
+          <a href="https://www.google.com/maps/@48.8606882,2.3356791,3a,90y,328.36h,87.55t/
+          data=!3m7!1e1!3m5!1sAF1QipMZ9YgnArbwEIbTDANeSQYFu9gNqpW_2Sv8FBvY!2e10!3e12!7i4352!8i1815">
             <img src="img/visiting/royal-palace.webp" alt="Royal Place">
             <h3>royal palace</h3>
             <div class="panorama-bar panorama-bar-non-hover"></div>
@@ -450,7 +452,7 @@
 
 <script src="scrypt/PreDefinition.js"></script>
 
-<script src="scrypt/navigationMenuFacade.js"></script>
+<script src="scrypt/NavigationMenuFacade.js"></script>
 
 <script src="scrypt/util/AnimationScript.js"></script>
 <script src="scrypt/util/AnimationScriptBuilder.js"></script>
