tickets a bit fixed

--- a/index.html
+++ b/index.html
@@ -324,15 +324,15 @@
             <h5>Ticket Type</h5>
             <ul>
               <li onclick="TicketsFacade.setTicketType('PERMANENT')">
-                <input type="radio" name="ticket-type" id="permanent" value="permanent" checked>
+                <input class="tickets__type-radio" type="radio" name="ticket-type" id="permanent" value="permanent" checked>
                 <label for="permanent">Permanent exhibition</label>
               </li>
               <li onclick="TicketsFacade.setTicketType('TEMPORARY')">
-                <input type="radio" name="ticket-type" id="temporary" value="temporary">
+                <input class="tickets__type-radio" type="radio" name="ticket-type" id="temporary" value="temporary">
                 <label for="temporary">Temporary exhibition</label>
               </li>
               <li onclick="TicketsFacade.setTicketType('COMBINED')">
-                <input type="radio" name="ticket-type" id="combined" value="combined">
+                <input class="tickets__type-radio" type="radio" name="ticket-type" id="combined" value="combined">
                 <label for="combined">Combined Admission</label>
               </li>
             </ul>
